added styling to css

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <title>WanderLost</title>
 </head>
 <body>
-<h1>WanderLost</h1>
+<h1>Wanderlost</h1>
      <button id="enter">Your next escape awaits</button>
      
 </body>
