added containers to html and tried to put city info and attraction info into their own containers

--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
 <h1>Wanderlost</h1>
+<div id="destinationContainer">
+    <div id="imageContainer"></div>
+    <div id="cityInfoContainer"></div>
+    <div id="attractionInfoContainer"></div>
+</div>
      <button id="enter">Your next escape awaits</button>
      
 </body>
