created functions to get info for cities and attractions and added a few event listeners

--- a/client/index.html
+++ b/client/index.html
@@ -11,9 +11,12 @@
 <body>
 <h1>Wanderlost</h1>
 <div id="destinationContainer">
-    <div id="imageContainer"></div>
+    <div id="countryInfoContainer"></div>
     <div id="cityInfoContainer"></div>
+    <div id="cityImageContainer"></div>
     <div id="attractionInfoContainer"></div>
+    <div id="attractionImageContainer"></div>
+
 </div>
      <button id="enter">Your next escape awaits</button>
      
